--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -19,9 +19,9 @@ encrypt_directory=false
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=true
-texture_format/s3tc=true
+texture_format/s3tc=false
 texture_format/etc=false
 texture_format/etc2=false
 binary_format/architecture="x86_64"
@@ -39,7 +39,7 @@ application/file_version=""
 application/product_version=""
 application/company_name=""
 application/product_name=""
-application/file_description=""
+application/file_description="Pirate Software Jan 2024 Game Jam "
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
